[project]
name = "instagram"
version = "0.1.0"
description = "instagram using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
instagram = "instagram.main:run"
run_crew = "instagram.main:run"
train = "instagram.main:train"
replay = "instagram.main:replay"
test = "instagram.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
